--- a/components/z-collapse/z-collapse.wxml
+++ b/components/z-collapse/z-collapse.wxml
@@ -1,9 +1,10 @@
 <!--components/z-collapse/z-collapse.wxml-->
-<view class='help'>
-  <view class='help_item' wx:for="{{questList}}" wx:key="index">
-    <view class='title' data-index='{{index}}' catchtap='panel'>
+<view class='help' bindtap="ceshi">
+
+  <view class='help_item' wx:for="{{questionList}}" wx:key="index">
+    <view class='title' data-index='{{index}}'  bindtap="panel">
       <view class='title_1'>{{item.questionType}}</view>
-      <view class='title_2'><checkbox value="cb" checked="true"/></view>
+      <view class='title_2'><image src="../../assets/bottom.png"></image></view>
     </view>
     <view class='detail' style="display:{{ item.t?'':'none'}}">
      
@@ -22,18 +23,32 @@
               <radio  value="{{items.questionId}}"/>
             </view>
           </radio-group>
-          <view class="wrapper">
-          <t-upload
-            mediaType="{{['image']}}"
-            files="{{originFiles}}"
-            gridConfig="{{gridConfig}}"
-            config="{{config}}"
-            bind:success="handleSuccess"
-            bind:remove="handleRemove"
-          >
-            <t-icon name="add" size="40rpx" color="rgba(0,0,0,0.26)" />
-          </t-upload>
-        </view>
+          <view class="wrapper" wx:if="{{questionImgShow}}">
+            <text>问题图片</text>
+            <t-upload
+              mediaType="{{['image']}}"
+              files="{{originFiles}}"
+              gridConfig="{{gridConfig}}"
+              config="{{config}}"
+              bind:success="handleSuccess"
+              bind:remove="handleRemove"
+            >
+              <t-icon name="add" size="40rpx" color="rgba(0,0,0,0.26)" />
+            </t-upload>
+          </view>
+          <view class="wrapper" wx:if="{{rectificationImgShow}}">
+            <text>整改图片</text>
+            <t-upload
+              mediaType="{{['image']}}"
+              files="{{originFiles}}"
+              gridConfig="{{gridConfig}}"
+              config="{{config}}"
+              bind:success="handleSuccess"
+              bind:remove="handleRemove"
+            >
+              <t-icon name="add" size="40rpx" color="rgba(0,0,0,0.26)" />
+            </t-upload>
+          </view>
         </view>
         
         
