--- a/miniprogram_npm/tdesign-miniprogram/upload/upload.wxml
+++ b/miniprogram_npm/tdesign-miniprogram/upload/upload.wxml
@@ -43,7 +43,7 @@
           <view wx:else class="{{classPrefix}}__progress-value">{{file.percent}}%</view>
         </view>
         <!-- 删除 -->
-        <view class="{{classPrefix}}__close-btn hotspot-expanded" bindtap="onDelete" data-index="{{index}}">
+        <view class="{{classPrefix}}__close-btn hotspot-expanded" bindtap="onDelete" data-index="{{index}}" wx:if="{{deleteShow}}">
           <slot wx:if="{{deleteBtn === 'slot'}}" name="deleteBtn" />
           <t-icon wx:else name="close" size="34rpx" color="#fff" />
         </view>
