--- a/components/z-collapse/z-collapse.wxss
+++ b/components/z-collapse/z-collapse.wxss
@@ -25,8 +25,9 @@
   text-align: center;
 }
 .help .help_item .title .title_2 image {
-  margin: 10rpx auto;
+  /* margin: 10rpx auto; */
   width: 25rpx;
+  height: 20rpx;
 }
 .help .help_item .detail {
   margin: 10rpx auto;
@@ -85,4 +86,7 @@
   background: transparent;
   transform: translate(-50%, -50%) scale(1);
   -webkit-transform: translate(-50%, -50%) scale(1);
+}
+.help .help_item .wrapper{
+  margin-top: 20rpx;
 }
