--- a/pages/inspection-module/inspection/inspection.wxml
+++ b/pages/inspection-module/inspection/inspection.wxml
@@ -6,12 +6,12 @@
       <text>巡查点</text>
     </view>
     <view class="item">
-      <text class="blue">1</text>
-      <text>巡查点</text>
+      <text class="blue">0</text>
+      <text>已巡查</text>
     </view>
     <view class="item">
       <text class="blue">1</text>
-      <text>巡查点</text>
+      <text>未巡查</text>
     </view>
   </view>
   <view class="screen-box box-shadow">
